discussion/kv_engine/173472/173472_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Continue/Cancel RangeScan on an I/O task

Add RangeScanContinueTask (READER) which is a task to be scheduled
in response to scan continue or cancel requests.

For continue, the "scanning" occurs on the I/O task.
For cancel, the destruct (close of snapshot) occurs on the (same) I/O
task.

In this commit the task "model" is intentionally simple, 1 new task
created per continue or cancel. The focus of the commit is the
scan continue/cancel logic and a future commit will look to improve
the task model by limiting the tasks and/or limiting the concurrency.

Change-Id: I96daac2c6b81da145f21754e17c519de13cafc03

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-25 12:08:03.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-25 12:34:14.000000000
Message: 
Patch Set 13: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19768/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27141/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27141/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38295/ : FAILURE

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38295/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38295/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16942/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<ContinueState> continueState;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16942/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16942/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19070/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-25T12:15:17.095Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-25T12:15:17.095Z] Expected equality of these values:
[2022-04-25T12:15:17.095Z]   100
[2022-04-25T12:15:17.095Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-25T12:15:17.095Z]     Which is: 96
[2022-04-25T12:15:17.095Z] vb:0 not fully resident after eviction
[2022-04-25T12:15:17.095Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-25T12:15:17.095Z] Expected equality of these values:
[2022-04-25T12:15:17.095Z]   100
[2022-04-25T12:15:17.095Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-25T12:15:17.095Z]     Which is: 98
[2022-04-25T12:15:17.095Z] vb:1 not fully resident after eviction
[2022-04-25T12:15:17.095Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (364 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19070/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18726/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-25T12:13:42.912Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-25T12:13:42.912Z] Expected equality of these values:
[2022-04-25T12:13:42.912Z]   100
[2022-04-25T12:13:42.912Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-25T12:13:42.912Z]     Which is: 93
[2022-04-25T12:13:42.912Z] vb:0 not fully resident after eviction
[2022-04-25T12:13:42.912Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-25T12:13:42.912Z] Expected equality of these values:
[2022-04-25T12:13:42.912Z]   100
[2022-04-25T12:13:42.912Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-25T12:13:42.912Z]     Which is: 97
[2022-04-25T12:13:42.912Z] vb:1 not fully resident after eviction
[2022-04-25T12:13:42.912Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (329 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18726/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17845/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/159]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2327 Test failed: `" (Expected `376013" to be less than or equal to `368640" - Unexpected fileSize for vbucket)
[2022-04-25T12:20:22.051Z] (247 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17845/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15910/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45582/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6601/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6693/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
